--- a/themes/pure/source/styles/_includes/post.less
+++ b/themes/pure/source/styles/_includes/post.less
@@ -22,7 +22,7 @@
         .post-info {
             text-align: center;
             font-size: 12px;
-            padding-bottom: 24px;
+            padding-bottom: -15px;
 
             .post-tag {
                 padding: 8px;
@@ -77,7 +77,7 @@
                 display: inline-block;
                 color: var(--content-first) !important;
                 position: relative !important;
-                background: linear-gradient(180deg, transparent 75%, var(--accent-second) 0) !important;
+               
             }
         }
 
@@ -121,7 +121,10 @@
 .gt-a-link {
     color: var(--content-first) !important;
     position: relative !important;
-    background: linear-gradient(180deg, transparent 75%, #4dabf766 0) !important;
+    font-size: 16px !important;
+}
+.gt-a-link:hover {
+    color: #ff6700 !important;
 }
 
 .gt-post-content {
