更新主页和文章页面

--- a/themes/pure/layout/_includes/header.ejs
+++ b/themes/pure/layout/_includes/header.ejs
@@ -1,8 +1,8 @@
-<nav class="navbar navbar-expand-lg">
+﻿<nav class="navbar navbar-expand-lg">
     <div class="navbar-brand">
         <img class="user-avatar" src="<%- url_for(theme.avatar) %>" alt="头像">
         <div class="site-name gt-c-content-color-first">
-            小何何
+           <a href="/" style="color:#343a40">小何何</a>
         </div>
     </div>
     <button aria-label="Navbar Toggler" class="navbar-toggler" type="button" id="changeNavbar">
