--- a/themes/pure/layout/index.ejs
+++ b/themes/pure/layout/index.ejs
@@ -18,7 +18,7 @@
                                 <div class="post-info">
                                     <span>
                                 <time class="post-time gt-c-content-color-first">
-                                    · <%- date(post.date) %> ·
+                                     <%- date(post.date) %> 
                                 </time>
                                 <% post.tags.forEach((tag) => { %>
                                     <a href="<%= url_for(tag.path) %>" class="post-tag">
