--- a/themes/pure/source/styles/_includes/post.less
+++ b/themes/pure/source/styles/_includes/post.less
@@ -15,7 +15,7 @@
         .post-title {
             font-size: 26px;
             text-align: center;
-            padding: 24px;
+            padding:20px 20px 5px 20px;
             font-weight: normal;
         }
 
